# socketify.py

./: .gitignore  .gitmodules  CLONE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SSGI.md  libuv.py  main.py  original.py  publish.sh  pyproject.toml  setup.py  socketify.py  tests.py
.github/: FUNDING.yml  pull_request_template.md
bench/: falcon_plaintext.py  flask_plaintext.py  quart_plaintext.py  robyn_plaintext.py  socketify_plaintext.py  uvicorn_guvicorn_plaintext.py  uvicorn_plaintext.py
docs/: CNAME  README.md  _config.yml  _sidebar.md  api.md  basics.md  cli.md  corking.md  examples.md  extensions.md  getting-started.md  graphiql.md  instalation.md  installation.md  middlewares.md  routes.md  ssl.md  static-files.md  streaming-data.md  templates.md  upload-post.md  websockets-backpressure.md
examples/: async.py  automatic_port_selection.py  backpressure.py  better_logging.py  broadcast.py  custom_json_serializer.py  error_handler.py  file_stream.py  forks.py  form_data.py  graceful_shutdown.py  graphiql.py  graphiql_raw.py  hello_world.py  hello_world_cli.py  hello_world_cli_ws.py  hello_world_unix_domain.py  http_request_cache.py  https.py  listen_options.py  middleware.py  middleware_async.py  middleware_auto.py  middleware_router.py  middleware_sync.py  not_found.py  proxy.py  proxy_server.py  requeriments.txt  router_and_basics.py  static_files.py  template_jinja2.py  template_mako.py  upgrade.py  upgrade_async.py  upload_or_post.py  websockets.py  ws_close_connection.py
misc/: crt.pem
src/: tests.py
tests/: async.py  (+3 more)
(+103 files in other folders)
